// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageSection is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2 css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
  data-test-subj="test subject string"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment center is rendered 1`] = `
<div
  class="css-92esag-euiPageSection-l-center-transparent-EuiPageSection"
>
  <div
    class="css-1lpwpgn-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment horizontalCenter is rendered 1`] = `
<div
  class="css-py7gj6-euiPageSection-l-horizontalCenter-transparent-EuiPageSection"
>
  <div
    class="css-1lpwpgn-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props alignment top is rendered 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props bottomBorder can be true 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    class="css-d4n4nx-euiPageRestictWidthStyles-l-border-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color accent is rendered 1`] = `
<div
  class="css-1a60029-euiPageSection-l-top-accent-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color danger is rendered 1`] = `
<div
  class="css-l3sixr-euiPageSection-l-top-danger-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color plain is rendered 1`] = `
<div
  class="css-9erces-euiPageSection-l-top-plain-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color primary is rendered 1`] = `
<div
  class="css-84dvzt-euiPageSection-l-top-primary-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color subdued is rendered 1`] = `
<div
  class="css-e5ezuj-euiPageSection-l-top-subdued-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color success is rendered 1`] = `
<div
  class="css-1d2fmm4-euiPageSection-l-top-success-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color transparent is rendered 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props color warning is rendered 1`] = `
<div
  class="css-1he2mkn-euiPageSection-l-top-warning-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props contentProps are passed down 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2 css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`EuiPageSection props grow can be true 1`] = `
<div
  class="css-v720rm-euiPageSection-grow-l-top-transparent-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize l is rendered 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    class="css-1iy07oy-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize m is rendered 1`] = `
<div
  class="css-1exmf4h-euiPageSection-m-top-transparent-EuiPageSection"
>
  <div
    class="css-1johrno-euiPageRestictWidthStyles-m-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize none is rendered 1`] = `
<div
  class="css-tsiul2-euiPageSection-top-transparent-EuiPageSection"
>
  <div
    class="css-6hu19r-euiPageRestictWidthStyles-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize s is rendered 1`] = `
<div
  class="css-x0i17c-euiPageSection-s-top-transparent-EuiPageSection"
>
  <div
    class="css-owi9ki-euiPageRestictWidthStyles-s-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize xl is rendered 1`] = `
<div
  class="css-g5n548-euiPageSection-xl-top-transparent-EuiPageSection"
>
  <div
    class="css-1rv4ba2-euiPageRestictWidthStyles-xl-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props paddingSize xs is rendered 1`] = `
<div
  class="css-1k2gx6o-euiPageSection-xs-top-transparent-EuiPageSection"
>
  <div
    class="css-1ur4fks-euiPageRestictWidthStyles-xs-EuiPageSection"
  />
</div>
`;

exports[`EuiPageSection props restrictWidth can be true 1`] = `
<div
  class="css-1w8pg0m-euiPageSection-l-top-transparent-EuiPageSection"
>
  <div
    class="css-gmhk7n-euiPageRestictWidthStyles-l-EuiPageSection"
  />
</div>
`;
